<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/pink_dark">

    <include layout="@layout/header"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline2"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        android:layout_margin="10dp"
        android:background="@color/pink_light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sans_black"
            android:text="@string/celtic_musicapp"
            android:layout_centerInParent="true"
            android:letterSpacing=".08"
            android:background="@color/pink_dark"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".26" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".97" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        android:padding="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_drawable">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline7">

            <ImageView
                android:id="@+id/image_music_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/irishjigg"
                android:padding="5dp"/>

            <Button
                android:id="@+id/play_jig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image_music_1"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/green_light"
                android:fontFamily="@font/ubuntu"
                android:text="@string/play_irish_jig"
                android:textSize="11sp" />



        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline7">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:src="@drawable/irishbag"
                android:id="@+id/image_music_2"
                />

            <Button
                android:id="@+id/play_bagpipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image_music_2"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/green_light"
                android:fontFamily="@font/ubuntu"
                android:text="@string/play_irish_bagpipe"
                android:textSize="11sp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/guideline7"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/image_music_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/irishharp"
                android:padding="5dp" />

            <Button
                android:id="@+id/play_harp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image_music_3"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/green_light"
                android:fontFamily="@font/ubuntu"
                android:text="@string/play_harp"
                android:textSize="11sp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline7"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:src="@drawable/irishband"
                android:id="@+id/image_music_4"
                />

            <Button
                android:id="@+id/play_band"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image_music_4"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/green_light"
                android:fontFamily="@font/ubuntu"
                android:text="@string/play_irish_band"
                android:textSize="11sp"/>

        </RelativeLayout>



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".92"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline10"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:id="@+id/copyright_logo"
            android:src="@drawable/ic_baseline_copyright_24"
            />
        <TextView
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/copyright_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:text="@string/celticmusic_company_llc"/>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>