<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Player"
    android:background="@color/pink_dark">

    <include layout="@layout/header_player"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".98" />


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintEnd_toEndOf="@id/guideline14"
        app:layout_constraintTop_toBottomOf="@+id/guideline18"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        android:background="@color/pink_light"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display"
            android:layout_centerInParent="true"
            android:text= "@string/celtic_musicapp"
            android:textStyle="bold"
            android:textColor="@color/green_dark"
            android:textSize="25sp"/>

    </RelativeLayout>





    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline11"
        app:layout_constraintBottom_toBottomOf="@id/guideline12"
        android:background="@color/pink_light">


        <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/seek_bar_main"
            android:text="@string/click_play_to_start"
            android:textColor="@color/green_dark"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/playfair_display"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tx_1"
            android:textColor="@color/green_dark"
            android:textSize="12sp"
            android:text="@string/time_here"
            android:layout_above="@+id/seek_bar_main"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"/>

       <SeekBar
           android:id="@+id/seek_bar_main"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           style="@style/Widget.AppCompat.ProgressBar.Horizontal"
           android:layout_centerInParent="true"
           android:paddingStart="20dp"
           android:paddingEnd="20dp"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/play_button"/>

        <ImageView
            android:id="@+id/stop_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_baseline_stop_24"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:focusable="true"/>

        <ImageView
            android:id="@+id/pause_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_baseline_pause_24"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"/>



    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />


    <ImageView
        android:id="@+id/main_image"
        android:layout_width="0dp"
        android:src="@drawable/irishsym"
        android:layout_height="0dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline13"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@id/guideline15"
        app:layout_constraintEnd_toEndOf="@+id/guideline14" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".12" />

</androidx.constraintlayout.widget.ConstraintLayout>